<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlocSpot</string>
    <string name="API_key">AIzaSyBOotwfHcV4BNWNTWw2V-DIU5616-4k0WY</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="pref_database_created">created</string>
    <string name="action_map">Map</string>
    <string name="new_category">Create a new category</string>
    <string name="action_clear">Clear Map</string>
    <string name="search_hint">\"\"</string>
    <string name="search_settings">\"\"</string>

    <string-array name="places">
        <item>ATM</item>
        <item>Bank</item>
        <item>Cafe</item>
        <item>Fire-Station</item>
        <item>Hospital</item>
        <item>Pharmacy</item>
        <item>Police</item>
        <item>Restaurant</item>
        <item>Shopping-Mall</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_fav_list">Favorites List</string>
    <string name="location_updated_message">Location Updated</string>

</resources>